--- a/CarPricePredictor/requirements.txt
+++ b/CarPricePredictor/requirements.txt
@@ -1,12 +1,7 @@
-streamlit>=1.36
-pycaret>=3.0
-pandas>=1.5
-numpy>=1.23
-scikit-learn>=1.2
-mlflow==2.8.1
-
-xgboost==1.7.6
-lightgbm==4.1.0
-catboost==1.2.3
-
-category-encoders==2.6.3
+numpy==1.25.2
+pandas==2.0.3
+pycaret==3.3.2
+joblib==1.3.2
+streamlit==1.49.0
+catboost==1.2
+openpyxl==3.1.2
